# yaTestDnn

./: LICENSE  README.md
cuDnn/: CMakeLists.txt  main.cpp
